# path_coverage_ros2

./: CMakeLists.txt  README.md  package.xml
launch/: path_coverage.launch.py
path_coverage/: border_drive.py  list_helper.py  trapezoidal_coverage.py
scripts/: path_coverage_node.py
