<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>path_coverage</name>
	<version>1.0.0</version>
	<description>Path coverage with boustrophedon decomposition</description>
	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<maintainer email="ros@vontaene.de">erik</maintainer>
	<maintainer email="hazeezadebayo@gmail.com">hazeezadebayo</maintainer>
	<license>BSD</license>
    <!-- ok -->

	<buildtool_depend>ament_cmake</buildtool_depend>  <!-- <buildtool_depend>catkin</buildtool_depend> -->
	<buildtool_depend>ament_cmake_python</buildtool_depend>

	<exec_depend>rclcpp</exec_depend>
	<depend>rclpy</depend>  <!-- <build_depend>rospy</build_depend> -->  

	<depend>nav2_bringup</depend>

	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>

	<!--  <build_depend>move_base_msgs</build_depend> --> 
	<!--  <build_depend>actionlib_msgs</build_depend> --> 
	<!--  <build_depend>nav_msgs</build_depend> --> 
	<!-- <exec_depend>message_runtime</exec_depend> --> 

	<!-- <build_export_depend>rospy</build_export_depend> --> 
	<!-- <build_export_depend>std_msgs</build_export_depend> --> 
	<!-- <build_export_depend>geometry_msgs</build_export_depend> --> 
	<!-- <build_export_depend>move_base_msgs</build_export_depend> --> 
	<!-- <build_export_depend>actionlib_msgs</build_export_depend> --> 
	<!-- <build_export_depend>actionlib_msgs</build_export_depend> --> 
	<!-- <build_export_depend>nav_msgs</build_export_depend> --> 
	<!-- <build_depend>message_generation</build_depend> --> 

	<!-- <exec_depend>rospy</exec_depend> --> 
	<!-- <exec_depend>ruby</exec_depend> --> 
	<!-- <exec_depend>std_msgs</exec_depend> --> 
	<!-- <exec_depend>geometry_msgs</exec_depend> --> 
	<!-- <exec_depend>move_base_msgs</exec_depend> --> 
	<!-- <exec_depend>actionlib_msgs</exec_depend> --> 
	<!-- <exec_depend>nav_msgs.msg</exec_depend> --> 
	<!-- <exec_depend>python-numpy</exec_depend> -->
	<!-- <exec_depend>python-shapely</exec_depend> --> 
	<!-- <exec_depend>tf</exec_depend> --> 
	<!-- <exec_depend>actionlib</exec_depend> --> 




  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
